# scholar-agent

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/agents/nodes/: __init__.py  generator.py  grader.py  hallucination_checker.py  retriever.py  rewriter.py  router.py  synthesizer.py
backend/app/models/: schemas.py
backend/app/services/: embeddings.py  llm_provider.py  paper_fetcher.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_grader.py  test_paper_fetcher.py  test_router.py  test_vector_store.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: answer-panel.tsx  header.tsx  paper-card.tsx  search-bar.tsx  source-list.tsx  thinking-steps.tsx
frontend/components/ui/: etheral-shadow.tsx  rotating-text.tsx
frontend/lib/: api.ts  types.ts
