[project]
name = "scholar-agent"
version = "0.1.0"
description = "Agentic RAG research assistant with LangGraph, ChromaDB, and arXiv/PubMed integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shanmukha Chatadi", email = "schatad@ncsu.edu"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.0.0",
    "arxiv>=2.1.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "httpx[http2]>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
